2011-07-08 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_10
* Fix 'uninitialised error' message

2011-06-30 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_09
* Cater for missing 'pod2text' command (Thanks to Sami Kerola)
* Fix 'uninitialised variable' error
* Added 'ccon' command (Thanks to Brandon Perkins)

2011-04-01 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_08
* Amend all L<xx> links to prevent build breakage on cygwin (Sf bug 3115635)

2011-01-24 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_07
* Fix for parsing config files with empty values (Stefan Steiner)
* Reinstate acting on '-l username' option (reported by Ryan Brown)

2010-09-20 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_06
* Fix test error on 5.8.8 (reported by Wei Wang)
* Added '--list', '-L' to list available cluster tags (idea from Markus Manzke)
* Fix terminal size only set on last windows (Sf bug 3061999)
* Added '--use_all_a_records' (Simon Fraser)

2010-06-20 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_05

* Tidy up pod for whatis errors
* Amend copyright years and text to be consistent
* Include missing buld prereq (Test::Trap)
* Correct '--font, -f' in cssh documentation
- Thanks to Tony Mancill for reporting these errors

2010-06-20 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_04

* Update MANIFEST file to ensure all correct files are included in release

2010-06-20 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_03

* Fix silly type in code/tests

2010-06-19 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_02

* Add in bugtracker and homepage resources to Build.PL file
* Bring new module App::ClusterSSH::Host into play for parsing host strings
* Patch to override font used on command line (Roland Rosenfeld)
* Put options in cssh pod into alphabetical order

2010-01-08 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_01

* Remove GNU tools and switch to Perl module layout using Module::Build
